# mcp-solana-affiliate

./: .env  .gitignore  README.md  pyproject.toml
mcp_solana_affiliate/: affiliates.py  cache.py  config.py  models.py  server.py  services.py
tests/: conftest.py  test_affiliates.py  test_config.py  test_models.py  test_server.py  test_services.py
